--- a/crimemap/templates/crime_by_type.html
+++ b/crimemap/templates/crime_by_type.html
@@ -1,3 +1,47 @@
-{% for crime in crime_list %}
-{{crime.longitude}},{{crime.latitude}},{{crime.address}},{{crime.type}},{{crime.date}}
-{% endfor %}
+<html style="height:100%;">
+<head>
+<title>Buffalo Crime Map</title>
+<script src="http://maps.google.com/maps?file=api&amp;v=2&amp;" type="text/javascript">
+</script>
+</head>
+
+<body onload="" onunload="GUnload()" style="height:100%;padding:0;margin:0;">
+<script type="text/javascript">
+var map_long = -78.820000;
+var map_lat = 42.938000;
+var map_zoom = 5;
+var crimes = [{% for crime in crime_list %}[{{crime.longitude}},{{ crime.latitude }},'{{ crime.address }}','{{ crime.type }}','{{ crime.date }}']{% if not forloop.last %},{% endif %}{% endfor %}];
+</script>
+
+<div id="map" style="height:100%;width:100%;">
+</div>
+
+<script type="text/javascript">
+function addCrimeMarker(lng, lat, address, crime_type, crime_date) {
+    var markerpt = new GPoint(lng, lat);
+    var marker = new GMarker(markerpt);
+    var html = '<b>' + crime_type + '</b><br>' + address + '<br>' + crime_date;
+    GEvent.addListener(marker, "click", function() { marker.openInfoWindowHtml(html); });
+    map.addOverlay(marker);
+}
+
+if (GBrowserIsCompatible()) {
+    var map_div = document.getElementById("map");
+    var map = new GMap2(map_div);
+
+    map.addControl(new GSmallMapControl());
+    map.addControl(new GMapTypeControl());
+
+    var pt = new GLatLng(top.map_lat, top.map_long);
+    map.setCenter(pt, 17 - top.map_zoom);
+
+    if (crimes) {
+        for (var i=0; i < crimes.length; i++) {
+            addCrimeMarker(crimes[i][0], crimes[i][1], crimes[i][2], crimes[i][3], crimes[i][4]);
+        }
+    }
+}
+</script>
+
+</body>
+</html>
